Improvements for serializing enums.